# ploverize

./: .gitignore  EXTENDED_OUTLINES  NOTES.txt  README.md  build.py  canonical_outlines.txt  cmu_dict.py  common_outlines.py  consonants.py  create_outlines.py  dict_from_base.py  final.json  homonyms.py  howto.py  k.py  lefts.txt  list.py  lookup  lookup.py  mk_dict.py  nonbase_words.txt  nonbase_words_origins.txt  one_stroke.py  one_syllable.py  orthography.py  out.txt  outlines.py  outlines_extended.py  partition_main.py  phonetic_keyboard.py  phonetic_words.py  prefix_list.txt  prefix_outline_freq.py  prefix_tree.py  pronunciation.py  pronunciation_to_outline.py  repeated_words.py  repeated_words.txt  rights.txt  rights_outlines.py  (+6 more)
data/: common_words.txt
dictionaries/: SOURCES.txt  affixes.json  base.json  basic.json  briefs.json  commands.json  common.json  contractions.dict  helping.dict  machine.json  main.dict  misc.json  numbers.json  prepositions.dict  pronouns.dict  punctuation.json
lib/: load.py  orthography.py  outline.py  outlines_extended.py
reports/: affix_report.py  stroke_count.py
seagull/: alice.txt  lib.py  main.dict
seagull/layout/: finals.txt  initials.txt  middles.txt
seagull/theory/: basic_verbs.md  common.json  contractions.md  dictionary.json  extras.json  index.md  numbers.md  prepositions.md  pronouns.md  punctuation.json  scrape.py
stetphoe/: Cargo.toml
stetphoe/src/: japanese.rs  keyboard.rs  main.rs
words/: basic_english_800.txt  one_syllable_words.txt
