[package]
name = "stetphoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
serialport = "4.2.0"

[dependencies.x11rb]
version = "0.10.1"
features = ["allow-unsafe-code", "render", "xtest"]
